<resources>
    <string name="app_name">Photo</string>
    <string name="title_activity_application">PhotoApp</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_photos">Фото</string>
    <string name="title_info">Инфо</string>

    <string name="title_activity_fullscreen_picture">FullscreenPictureActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="author">Разработчик:</string>
    <string name="contacts">Контакты:</string>
    <string name="libraries">Использованные библиотеки: </string>
    <string name="mail">valeriya.ridchenko@mail.ru</string>
    <string name="author_name">Валерия Ридченко</string>
    <string name="libraries_names">Retrofit, converter-gson, picasso</string>
</resources>
