<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:padding="5dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="5dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutWithMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/infoMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:padding="5dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/libraries"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:padding="5dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/libraries_names"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="5dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/splash_logo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_activity_application"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_margin="5dp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>